client/src/Components/timswork/MyCollections.css
.my-collection-container {
    /* border: 1px solid black; */
    height: 100vh;
}

.my-collection-header {
    /* border: 1px solid black; */
    height: 8rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    font-family: Gibson;
    font-weight: 400px;
    padding-left: 2%;
    margin-top: 3%;
    margin-bottom: 3%;
}

.my-collection-header h1 {
    font-size: 64px;
}

.my-collection-header p {
    font-size: 28px;
    color: #5540C7;
}

.my-collection-row {
    /* border: 1px solid black; */
    margin-left: 2%;
    display: flex;
}

.my-collection-filter-container {
    /* border: 1px solid black; */
    height: 400px;
    width: 300px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.my-collection-filter-container p, 
.my-collection-filter-container a {
    font-family: Gibson;
}
  
.my-collection-filter-container p:not(:first-child) {
    margin-top: -10px;
}
  
.dropdown-button {
    border: none;
    border-bottom: 1px solid black;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 14.531rem;
    font-size: 18px;
}
  
.add-button {
    font-size: "18px";
    color: "#5540C7";
    text-decoration: none;
}
  
.add-button:hover,
.add-button:active {
    text-decoration: none;
}

.my-collection-art-container {
    display: flex;
}
  
.my-collection-art-img-box {
    height: 268px;
    width: 280px;
    background: #FFFFFF;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 15%;
    border: none;
}

.my-collection-art-img-box img {
    width: 207px;
    height: 217px;
}

.modal-box {
    background: black;
    height: 650px;
    width: 800px;
}

.modal-content {
    width: 100%;
    background-color: black;
}

.modal-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.model-img {
    height: 300px;
    width: 450px;
}

.model-text-container {
    margin-top: 30px;
    height: 300px;
    width: 450px;
    background: #FFFFFF;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.model-text-container h3{
    font-family: Gibson;
    font-weight: 700;
    font-size: 25px;
}

.model-text-container h4, .model-text-container span{
    font-family: Gibson;
    font-weight: 600;
    font-size: 16px;
    margin-bottom: 3%;
}

.model-text-container span{
    font-weight: 700;
    color: #5540C7;
}

.model-text-container h5 {
    font-family: Gibson;
    font-weight: 700;
    font-size: 14px;
    padding-left: 2%;
    padding-right: 2%;
}

.model-price-info {
    /* border: 1px solid red; */
    width: 50%;
    position: relative;
    top: 10px;
    left: -100px;

}

.model-price-info span {
    display: flex;
    justify-content: space-between;
    color: black;
}

.model-price-info p {
    font-weight: 100;
}

.model-price-info a {
    color: #5540C7;
    text-decoration: none;
}

.model-sell-btn {
    background-color: #5A45C7;
    color: white;
    font-size: 18px;
    width: 120px;
    border-radius: 10px;
    position: relative;
    bottom: 70px;
    left: 275px;
}

